# Footprints_v.0.1

./: .gitignore  :  INSTALL  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  footprints  foots.c
.deps/: foots.Po
autom4te.cache/: output.0  traces.0  traces.1
